--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -7,10 +7,13 @@
 
     <ul class="list-unstyled">
         <li class="media" *ngFor="let user of Users; let i = index">
-            <img [src]="user.avatar" class="mr-3" [alt]="user.name">
+            <div *ngIf="user.mifoto">
+                <img  src="http://localhost:1337{{user.mifoto.url}}" class="mr-3" [alt]="user.name">
+
+            </div>
             <div class="media-body">
-                <h5 class="mt-0 mb-1">{{user.name}}</h5>
-                {{user._id}}
+                <h5 class="mt-0 mb-1">{{user.nombre}}</h5>
+               
             </div>
         </li>
     </ul>
